Changes: Edited groups & task including adding new settings page